--- a/index.html
+++ b/index.html
@@ -1,12 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>JS Vite Template</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/js/main.js"></script>
-  </body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Tincture</title>
+	</head>
+	<body class="page">
+		<header class="header">
+			<div class="container">
+				<nav class="header__nav">
+					<a class="header__logo" href="#"
+						><img src="./src/assets/icons/headerlogo.svg" alt="logo"
+					/></a>
+					<ul class="header__menu">
+						<li class="header__menu-button">
+							<a class="header__menu-link header__menu-link_orange" href="#"
+								>+7 (915)-386-56-28</a
+							>
+						</li>
+						<li class="header__menu-button">
+							<a href="#"
+								><img src="./src/assets/icons/whatsup.svg" alt="icon"
+							/></a>
+						</li>
+						<li class="header__menu-button">
+							<a href="#"><img src="./src/assets/icons/tg.svg" alt="icon" /></a>
+						</li>
+						<li class="header__menu-button">
+							<a href="#"><img src="./src/assets/icons/vk.svg" alt="icon" /></a>
+						</li>
+					</ul>
+					<ul class="header__menu">
+						<li class="header__menu-item">
+							<a class="header__menu-link" href="#">Праздники и события</a>
+						</li>
+						<li class="header__menu-item">
+							<a class="header__menu-link" href="#">Подарочный сертификат</a>
+						</li>
+						<li class="header__menu-item">
+							<a class="header__menu-link" href="#">Партнёрам</a>
+						</li>
+						<li class="header__menu-item">
+							<a class="header__menu-link" href="#">Путеводитель</a>
+						</li>
+					</ul>
+				</nav>
+			</div>
+		</header>
+		<script type="module" src="/src/js/main.js"></script>
+	</body>
 </html>
