refactor: img + nav

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 						<span class="header__burger-bar"></span>
 						<span class="header__burger-bar"></span>
 					</div>
-					<nav class="header__nav-mobile">
+					<div class="header__nav-mobile">
 						<ul class="header__menu-mobile">
 							<li class="header__menu-mobile-item">
 								<a class="header__menu-mobile-link" href="#"
@@ -66,7 +66,7 @@
 								<a class="header__menu-mobile-link" href="#">Путеводитель</a>
 							</li>
 						</ul>
-					</nav>
+					</div>
 				</nav>
 			</div>
 		</header>
