--- a/index.html
+++ b/index.html
@@ -1,12 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>JS Vite Template</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/js/main.js"></script>
-  </body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>JS Vite Template</title>
+	</head>
+	<body class="page">
+		<section class="hero">
+			<div class="hero__inner container">
+				<div class="hero__nav">
+					<div class="hero__nav-locations">
+						<img
+							class="hero__nav-location-flag"
+							src="./src/assets/icons/flag.svg"
+							alt="flag"
+						/>
+						<span class="hero__nav-location-contry">Санкт-Петербург</span>
+						<img
+							class="hero__nav-location-flag"
+							src="./src/assets/icons/flag.svg"
+							alt="flag"
+						/>
+						<span class="hero__nav-location-contry">Москва</span>
+					</div>
+					<a class="hero__nav-btn" href="basket"
+						><img src="./src/assets/icons/shopping-basket.svg" alt="shop" />Ваш
+						заказ <span class="hero__nav-price">9450 ₽</span>
+					</a>
+				</div>
+				<div class="hero__content">
+					<img
+						class="hero__content-images"
+						src="./src/assets/images/promo.jpg"
+						alt="promo"
+					/>
+					<div class="hero__content-about">
+						<h1 class="hero__content-about-title">Выходное меню</h1>
+						<p class="hero__content-about-description">
+							Здесь вы можете заказать еду в выходной день. Сделайте это в любое
+							время, заблаговременно до посещения. Минимальное время заказа
+							указано рядом с названием каждой настоишной.
+						</p>
+					</div>
+				</div>
+			</div>
+		</section>
+		<script type="module" src="/src/js/main.js"></script>
+	</body>
 </html>
