feature: add full adaptive

--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
 						<span class="hero__nav-location-contry">Москва</span>
 					</div>
 					<a class="hero__nav-btn" href="basket"
-						><img src="./src/assets/icons/shopping-basket.svg" alt="shop" />Ваш
-						заказ <span class="hero__nav-price">9450 ₽</span>
+						><img src="./src/assets/icons/shopping-basket.svg" alt="shop" />
+						<span class="hero__nav-btn_zakaz">Ваш заказ </span
+						><span class="hero__nav-price">9450 ₽</span>
 					</a>
 				</div>
 				<div class="hero__content">
