feature: slider test

--- a/index.html
+++ b/index.html
@@ -3,10 +3,55 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link
+			rel="stylesheet"
+			href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"
+		/>
 		<title>JS Vite Template</title>
 	</head>
 	<body class="page">
-		<div class="container"></div>
+		<section class="second">
+			<div class="second__inner container">
+				<h2 class="second__content-title title">Наше портфолио</h2>
+				<div class="swiper">
+					<div class="swiper-wrapper">
+						<div class="swiper-slide">
+							<img src="./src/assets/images/berry.jpg" alt="eda" />
+						</div>
+						<div class="swiper-slide">
+							<img src="./src/assets/images/berry.jpg" alt="eda" />
+						</div>
+						<div class="swiper-slide">
+							<img src="./src/assets/images/berry.jpg" alt="eda" />
+						</div>
+						<div class="swiper-slide">
+							<img src="./src/assets/images/berry.jpg" alt="eda" />
+						</div>
+						<div class="swiper-slide">
+							<img src="./src/assets/images/berry.jpg" alt="eda" />
+						</div>
+						<div class="swiper-slide">
+							<img src="./src/assets/images/berry.jpg" alt="eda" />
+						</div>
+						<div class="swiper-slide">
+							<img src="./src/assets/images/berry.jpg" alt="eda" />
+						</div>
+						<div class="swiper-slide">
+							<img src="./src/assets/images/berry.jpg" alt="eda" />
+						</div>
+						<div class="swiper-slide">
+							<img src="./src/assets/images/berry.jpg" alt="eda" />
+						</div>
+						<div class="swiper-slide">
+							<img src="./src/assets/images/berry.jpg" alt="eda" />
+						</div>
+					</div>
+					<div class="swiper-pagination"></div>
+				</div>
+			</div>
+		</section>
 		<script type="module" src="/src/js/main.js"></script>
+		<script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+		<script src="/src/js/carousel.js"></script>
 	</body>
 </html>
