--- a/index.html
+++ b/index.html
@@ -12,8 +12,90 @@
 	<body class="page">
 		<section class="second">
 			<div class="second__inner container">
-				<h2 class="second__content-title title">Наше портфолио</h2>
+				<h2 class="second-title">Закусь</h2>
+				<div class="second__content">
+					<div class="second__content-buttons">
+						<a class="second__content-buttons-button" href="#">Роллы</a>
+						<a class="second__content-buttons-button" href="#">Пицца</a>
+						<a class="second__content-buttons-button" href="#">Устрицы</a>
+						<a class="second__content-buttons-button" href="#">Острое</a>
+						<a class="second__content-buttons-button" href="#">Новинки</a>
+					</div>
+					<form class="search-bar" action="">
+						<input type="text" placeholder="Поиск..." name="q" />
+						<button type="submit">
+							<img src="./src/assets/icons/search.svg" alt="#" />
+						</button>
+					</form>
+				</div>
 				<div class="swiper">
+					<div class="swiper-wrapper">
+						<div class="swiper-slide">
+							<img src="./src/assets/images/berry.jpg" alt="eda" />
+							<div class="swiper-slide__about">
+								<p class="swiper-slide__about-name">Чипсы, 50гр</p>
+								<p class="swiper-slide__about-about">Вкус: соль</p>
+								<p class="swiper-slide__about-about-price">120 ₽</p>
+								<div class="swiper-slide__about-description"></div>
+								<a class="swiper-slide__about-btn" href="#">
+									<img src="./src/assets/icons/podond.svg" alt="icon" />В
+									заказ</a
+								>
+							</div>
+						</div>
+						<div class="swiper-slide">
+							<img src="./src/assets/images/berry.jpg" alt="eda" />
+							<div class="swiper-slide__about">
+								<p class="swiper-slide__about-name">Чипсы, 50гр</p>
+								<p class="swiper-slide__about-about">Вкус: соль</p>
+								<p class="swiper-slide__about-about-price">120 ₽</p>
+								<a class="swiper-slide__about-btn" href="#">
+									<img src="./src/assets/icons/podond.svg" alt="icon" />В
+									заказ</a
+								>
+							</div>
+						</div>
+						<div class="swiper-slide">
+							<img src="./src/assets/images/berry.jpg" alt="eda" />
+							<div class="swiper-slide__about">
+								<p class="swiper-slide__about-name">Чипсы, 50гр</p>
+								<p class="swiper-slide__about-about">Вкус: соль</p>
+								<p class="swiper-slide__about-about-price">120 ₽</p>
+								<a class="swiper-slide__about-btn" href="#">
+									<img src="./src/assets/icons/podond.svg" alt="icon" />В
+									заказ</a
+								>
+							</div>
+						</div>
+						<div class="swiper-slide">
+							<img src="./src/assets/images/berry.jpg" alt="eda" />
+							<div class="swiper-slide__about">
+								<p class="swiper-slide__about-name">Чипсы, 50гр</p>
+								<p class="swiper-slide__about-about">Вкус: соль</p>
+								<p class="swiper-slide__about-about-price">120 ₽</p>
+								<a class="swiper-slide__about-btn" href="#">
+									<img src="./src/assets/icons/podond.svg" alt="icon" />В
+									заказ</a
+								>
+							</div>
+						</div>
+						<div class="swiper-slide">
+							<img src="./src/assets/images/berry.jpg" alt="eda" />
+							<div class="swiper-slide__about">
+								<p class="swiper-slide__about-name">Чипсы, 50гр</p>
+								<p class="swiper-slide__about-about">Вкус: соль</p>
+								<p class="swiper-slide__about-about-price">120 ₽</p>
+								<a class="swiper-slide__about-btn" href="#">
+									<img src="./src/assets/icons/podond.svg" alt="icon" />В
+									заказ</a
+								>
+							</div>
+						</div>
+					</div>
+					<div class="swiper-pagination"></div>
+				</div>
+
+				<!-- <div class="swiper">
 					<div class="swiper-wrapper">
 						<div class="swiper-slide">
 							<img src="./src/assets/images/berry.jpg" alt="eda" />
@@ -47,7 +129,7 @@
 						</div>
 					</div>
 					<div class="swiper-pagination"></div>
-				</div>
+				</div> -->
 			</div>
 		</section>
 		<script type="module" src="/src/js/main.js"></script>
