fix: header s size

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Tincture</title>
 	</head>
-	<body>
+	<body class="page">
 		<header class="header">
 			<div class="container">
 				<nav class="header__nav">
