chore: new images
new size photo + make json.file

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				<div class="swiper">
 					<div class="swiper-wrapper">
 						<div class="swiper-slide">
-							<img src="./src/assets/images/berry.jpg" alt="eda" />
+							<img src="./src/assets/images/products/chips.jpg" alt="eda" />
 							<div class="swiper-slide__about">
 								<p class="swiper-slide__about-name">Чипсы, 50гр</p>
 								<p class="swiper-slide__about-about">Вкус: соль</p>
@@ -44,7 +44,7 @@
 							</div>
 						</div>
 						<div class="swiper-slide">
-							<img src="./src/assets/images/berry.jpg" alt="eda" />
+							<img src="../src/assets/images/products/chips.jpg" alt="eda" />
 							<div class="swiper-slide__about">
 								<p class="swiper-slide__about-name">Чипсы, 50гр</p>
 								<p class="swiper-slide__about-about">Вкус: соль</p>
@@ -56,7 +56,7 @@
 							</div>
 						</div>
 						<div class="swiper-slide">
-							<img src="./src/assets/images/berry.jpg" alt="eda" />
+							<img src="./src/assets/images/products/chips.jpg" alt="eda" />
 							<div class="swiper-slide__about">
 								<p class="swiper-slide__about-name">Чипсы, 50гр</p>
 								<p class="swiper-slide__about-about">Вкус: соль</p>
@@ -68,7 +68,7 @@
 							</div>
 						</div>
 						<div class="swiper-slide">
-							<img src="./src/assets/images/berry.jpg" alt="eda" />
+							<img src="./src/assets/images/products/chips.jpg" alt="eda" />
 							<div class="swiper-slide__about">
 								<p class="swiper-slide__about-name">Чипсы, 50гр</p>
 								<p class="swiper-slide__about-about">Вкус: соль</p>
@@ -80,7 +80,7 @@
 							</div>
 						</div>
 						<div class="swiper-slide">
-							<img src="./src/assets/images/berry.jpg" alt="eda" />
+							<img src="./src/assets/images/products/chips.jpg" alt="eda" />
 							<div class="swiper-slide__about">
 								<p class="swiper-slide__about-name">Чипсы, 50гр</p>
 								<p class="swiper-slide__about-about">Вкус: соль</p>
