feature: minus api

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 			rel="stylesheet"
 			href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"
 		/>
-		<title>JS Vite Template</title>
+		<title>Tincture</title>
 	</head>
 	<body class="page">
 		<section class="second">
@@ -101,5 +101,6 @@
 		<script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
 		<script src="/src/js/carousel.js"></script>
 		<script src="/src/js/fetchProducts.js"></script>
+		<script src="/api/getApi.js"></script>
 	</body>
 </html>
