--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link
+			rel="stylesheet"
+			href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"
+		/>
 		<title>Tincture</title>
 	</head>
 	<body class="page">
@@ -70,7 +74,128 @@
 				</nav>
 			</div>
 		</header>
+		<section class="second">
+			<div class="second__inner container">
+				<h2 class="second-title">Напитки</h2>
+				<div class="second__content">
+					<div class="second__content-buttons">
+						<a class="second__content-buttons-button" href="#">Вина</a>
+						<a class="second__content-buttons-button" href="#">Настойки</a>
+						<a class="second__content-buttons-button" href="#">Виски</a>
+						<a class="second__content-buttons-button" href="#">Пиво</a>
+						<a class="second__content-buttons-button" href="#">Коктели</a>
+					</div>
+					<form class="search-bar" action="">
+						<input type="text" placeholder="Поиск..." name="q" />
+						<button type="submit">
+							<img src="./src/assets/icons/lupa.svg" alt="#" />
+						</button>
+					</form>
+				</div>
+				<div class="swiper">
+					<div class="swiper-wrapper">
+						<div class="swiper-slide">
+							<div class="swiper-slide__about">
+								<img src="./src/assets/images/vine.jpg" alt="voda" />
+								<div class="swiper-slide__about-inner">
+									<p class="swiper-slide__about-inner-name">Вино белое сухое</p>
+									<p class="swiper-slide__about-inner-about">
+										Белое сухое французское вино
+									</p>
+									<div class="swiper-slide__about-inner-down">
+										<p class="swiper-slide__about-inner-down-price">120 ₽</p>
+										<a class="swiper-slide__about-inner-down-btn" href="#"
+											><img src="./src/assets/icons/corob.svg" alt="corzina" />В
+											заказ</a
+										>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="swiper-slide">
+							<div class="swiper-slide__about">
+								<img src="./src/assets/images/vine.jpg" alt="voda" />
+								<div class="swiper-slide__about-inner">
+									<p class="swiper-slide__about-inner-name">Вино красное</p>
+									<p class="swiper-slide__about-inner-about">
+										Красное сладкое итальянское вино
+									</p>
+									<div class="swiper-slide__about-inner-down">
+										<p class="swiper-slide__about-inner-down-price">120 ₽</p>
+										<a class="swiper-slide__about-inner-down-btn" href="#"
+											><img src="./src/assets/icons/corob.svg" alt="corzina" />В
+											заказ</a
+										>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="swiper-slide">
+							<div class="swiper-slide__about">
+								<img src="./src/assets/images/vine.jpg" alt="voda" />
+								<div class="swiper-slide__about-inner">
+									<p class="swiper-slide__about-inner-name">
+										Вино розовое сухое
+									</p>
+									<p class="swiper-slide__about-inner-about">
+										Белое розовое французское вино
+									</p>
+									<div class="swiper-slide__about-inner-down">
+										<p class="swiper-slide__about-inner-down-price">120 ₽</p>
+										<a class="swiper-slide__about-inner-down-btn" href="#"
+											><img src="./src/assets/icons/corob.svg" alt="corzina" />В
+											заказ</a
+										>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="swiper-slide">
+							<div class="swiper-slide__about">
+								<img src="./src/assets/images/vine.jpg" alt="voda" />
+								<div class="swiper-slide__about-inner">
+									<p class="swiper-slide__about-inner-name">
+										Вино красное сухое
+									</p>
+									<p class="swiper-slide__about-inner-about">
+										Красное сухое французское вино
+									</p>
+									<div class="swiper-slide__about-inner-down">
+										<p class="swiper-slide__about-inner-down-price">120 ₽</p>
+										<a class="swiper-slide__about-inner-down-btn" href="#"
+											><img src="./src/assets/icons/corob.svg" alt="corzina" />В
+											заказ</a
+										>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="swiper-slide">
+							<div class="swiper-slide__about">
+								<img src="./src/assets/images/vine.jpg" alt="voda" />
+								<div class="swiper-slide__about-inner">
+									<p class="swiper-slide__about-inner-name">Вино белое сухое</p>
+									<p class="swiper-slide__about-inner-about">
+										Белое сухое французское вино
+									</p>
+									<div class="swiper-slide__about-inner-down">
+										<p class="swiper-slide__about-inner-down-price">120 ₽</p>
+										<a class="swiper-slide__about-inner-down-btn" href="#"
+											><img src="./src/assets/icons/corob.svg" alt="corzina" />В
+											заказ</a
+										>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="swiper-pagination"></div>
+				</div>
+			</div>
+		</section>
 		<script type="module" src="/src/js/main.js"></script>
 		<script src="./src/js/burger.js"></script>
+		<script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+		<script src="./src/js/carousel.js"></script>
 	</body>
 </html>
