--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link
+			rel="stylesheet"
+			href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"
+		/>
 		<title>Tincture</title>
 	</head>
 	<body class="page">
@@ -70,7 +74,134 @@
 				</nav>
 			</div>
 		</header>
+		<section class="second">
+			<div class="second__inner container">
+				<h2 class="second-title">Закусь</h2>
+				<div class="second__content">
+					<div class="second__content-buttons">
+						<a class="second__content-buttons-button" href="#">Роллы</a>
+						<a class="second__content-buttons-button" href="#">Пицца</a>
+						<a class="second__content-buttons-button" href="#">Устрицы</a>
+						<a class="second__content-buttons-button" href="#">Острое</a>
+						<a class="second__content-buttons-button" href="#">Новинки</a>
+					</div>
+					<form class="search-bar" action="">
+						<input type="text" placeholder="Поиск..." name="q" />
+						<button type="submit">
+							<img src="./src/assets/icons/lupa.svg" alt="#" />
+						</button>
+					</form>
+				</div>
+				<div class="swiper">
+					<div class="swiper-wrapper">
+						<div class="swiper-slide">
+							<div class="swiper-slide__about">
+								<img src="./src/assets/images/nabor.jpg" alt="eda" />
+								<div class="swiper-slide__about-inner">
+									<div class="swiper-slide__about-inner-up">
+										<a class="swiper-slide__about-inner-down-btn" href="#"
+											>Набор</a
+										>
+										<p class="swiper-slide__about-inner-name">
+											Набор для двоих, 580гр
+										</p>
+									</div>
+									<div class="swiper-slide__about-inner-medium">
+										<img src="./src/assets/icons/persons.svg" alt="persons" />
+										<p class="swiper-slide__about-inner-name">На 2 персоны</p>
+									</div>
+									<p class="swiper-slide__about-inner-about">
+										Багет, ржанная чиабатта, вафли, гриссини, мусс из цветной
+										капусты с беконом, паштет с вишневым конфи, авторская
+										настойка, ассорти сыров и мясных
+									</p>
+									<div class="swiper-slide__about-inner-down">
+										<p class="swiper-slide__about-inner-down-price">2375 ₽</p>
+										<a class="swiper-slide__about-inner-down-btn" href="#"
+											><img
+												src="./src/assets/icons/corzina.svg"
+												alt="corzina"
+											/>В заказ</a
+										>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="swiper-slide">
+							<div class="swiper-slide__about">
+								<img src="./src/assets/images/nabor.jpg" alt="eda" />
+								<div class="swiper-slide__about-inner">
+									<div class="swiper-slide__about-inner-up">
+										<a class="swiper-slide__about-inner-down-btn" href="#"
+											>Набор</a
+										>
+										<p class="swiper-slide__about-inner-name">
+											Большой набор , 1100гр
+										</p>
+									</div>
+									<div class="swiper-slide__about-inner-medium">
+										<img src="./src/assets/icons/persons.svg" alt="persons" />
+										<p class="swiper-slide__about-inner-name">На 4 персоны</p>
+									</div>
+									<p class="swiper-slide__about-inner-about">
+										Ассорти мясных деликатесов, ассорти сыров и антипасти,
+										хлебная корзина, парфе из птицы с фисташкой, гуаккамоле и
+										бутылка настойки в подарок.
+									</p>
+									<div class="swiper-slide__about-inner-down">
+										<p class="swiper-slide__about-inner-down-price">4000 ₽</p>
+										<a class="swiper-slide__about-inner-down-btn" href="#"
+											><img
+												src="./src/assets/icons/corzina.svg"
+												alt="corzina"
+											/>В заказ</a
+										>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="swiper-slide">
+							<div class="swiper-slide__about">
+								<img src="./src/assets/images/nabor.jpg" alt="eda" />
+								<div class="swiper-slide__about-inner">
+									<div class="swiper-slide__about-inner-up">
+										<a class="swiper-slide__about-inner-down-btn" href="#"
+											>Набор</a
+										>
+										<p class="swiper-slide__about-inner-name">
+											Набор для двоих, 580гр
+										</p>
+									</div>
+									<div class="swiper-slide__about-inner-medium">
+										<img src="./src/assets/icons/persons.svg" alt="persons" />
+										<p class="swiper-slide__about-inner-name">На 2 персоны</p>
+									</div>
+									<p class="swiper-slide__about-inner-about">
+										Багет, ржанная чиабатта, вафли, гриссини, мусс из цветной
+										капусты с беконом, паштет с вишневым конфи, авторская
+										настойка, ассорти сыров и мясных
+									</p>
+									<div class="swiper-slide__about-inner-down">
+										<p class="swiper-slide__about-inner-down-price">2375 ₽</p>
+										<a class="swiper-slide__about-inner-down-btn" href="#"
+											><img
+												src="./src/assets/icons/corzina.svg"
+												alt="corzina"
+											/>В заказ</a
+										>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="swiper-pagination"></div>
+				</div>
+				<a class="fourth__btn" href="#">Показать ещё</a>
+			</div>
+		</section>
 		<script type="module" src="/src/js/main.js"></script>
+		<script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
 		<script src="./src/js/burger.js"></script>
+		<script src="./src/js/carousel.js"></script>
 	</body>
 </html>
