feature: add btn

--- a/index.html
+++ b/index.html
@@ -191,6 +191,7 @@
 					</div>
 					<div class="swiper-pagination"></div>
 				</div>
+				<a class="fourth__btn" href="#">Показать ещё</a>
 			</div>
 		</section>
 		<script type="module" src="/src/js/main.js"></script>
