--- a/index.html
+++ b/index.html
@@ -73,4 +73,31 @@
 		<script type="module" src="/src/js/main.js"></script>
 		<script src="./src/js/burger.js"></script>
 	</body>
+	<footer class="footer">
+		<div class="footer__inner container">
+			<div class="footer__content">
+				<div class="footer__content-left">
+					<img src="./src/assets/images/footerLogo.png" alt="logo" />
+					<p>Подписка на эксклюзивные новости</p>
+					<p class="footer__content-left-input">moyapochta@mail.ru</p>
+				</div>
+			</div>
+			<ul class="header__menu">
+				<li class="header__menu-button header__menu-link_orange">
+					<a class="header__menu-link" href="#">+7 (915)-386-56-28</a>
+				</li>
+				<li class="header__menu-button">
+					<a href="#"
+						><img src="./src/assets/icons/whatsup.svg" alt="icon"
+					/></a>
+				</li>
+				<li class="header__menu-button">
+					<a href="#"><img src="./src/assets/icons/tg.svg" alt="icon" /></a>
+				</li>
+				<li class="header__menu-button">
+					<a href="#"><img src="./src/assets/icons/vk.svg" alt="icon" /></a>
+				</li>
+			</ul>
+		</div>
+	</footer>
 </html>
