--- a/index.html
+++ b/index.html
@@ -72,27 +72,27 @@
 		</header>
 		<section class="hero">
 			<div class="hero__inner container">
-				<div class="hero__nav">
+				<nav class="hero__nav">
 					<div class="hero__nav-locations">
 						<img
 							class="hero__nav-location-flag"
 							src="./src/assets/icons/flag.svg"
 							alt="flag"
 						/>
-						<span class="hero__nav-location-contry">Санкт-Петербург</span>
+						<span class="hero__nav-location-city">Санкт-Петербург</span>
 						<img
 							class="hero__nav-location-flag"
 							src="./src/assets/icons/flag.svg"
 							alt="flag"
 						/>
-						<span class="hero__nav-location-contry">Москва</span>
+						<span class="hero__nav-location-city">Москва</span>
 					</div>
 					<a class="hero__nav-btn" href="basket"
 						><img src="./src/assets/icons/shopping-basket.svg" alt="shop" />
 						<span class="hero__nav-btn_zakaz">Ваш заказ </span
 						><span class="hero__nav-price">9450 ₽</span>
 					</a>
-				</div>
+				</nav>
 				<div class="hero__content">
 					<img
 						class="hero__content-images"
