chore: code refactor

--- a/index.html
+++ b/index.html
@@ -74,22 +74,27 @@
 			<div class="hero__inner container">
 				<nav class="hero__nav">
 					<div class="hero__nav-locations">
-						<img
-							class="hero__nav-location-flag"
-							src="./src/assets/icons/flag.svg"
-							alt="flag"
-						/>
-						<span class="hero__nav-location-city">Санкт-Петербург</span>
-						<img
-							class="hero__nav-location-flag"
-							src="./src/assets/icons/flag.svg"
-							alt="flag"
-						/>
-						<span class="hero__nav-location-city">Москва</span>
+						<a class="a" href=""
+							><img
+								class="hero__nav-location-flag"
+								src="./src/assets/icons/flag.svg"
+								alt="flag"
+							/>
+							<span class="hero__nav-location-city">Санкт-Петербург</span></a
+						>
+						<a class="a" href="">
+							<img
+								class="hero__nav-location-flag"
+								z
+								src="./src/assets/icons/flag.svg"
+								alt="flag"
+							/>
+							<span class="hero__nav-location-city">Москва</span>
+						</a>
 					</div>
 					<a class="hero__nav-btn" href="basket"
 						><img src="./src/assets/icons/shopping-basket.svg" alt="shop" />
-						<span class="hero__nav-btn_zakaz">Ваш заказ </span
+						<span class="hero__nav-btn_order">Ваш заказ </span
 						><span class="hero__nav-price">9450 ₽</span>
 					</a>
 				</nav>
