chore: code refacror

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 			<div class="hero__inner container">
 				<nav class="hero__nav">
 					<div class="hero__nav-locations">
-						<a class="a" href=""
+						<a class="links" href=""
 							><img
 								class="hero__nav-location-flag"
 								src="./src/assets/icons/flag.svg"
@@ -82,7 +82,7 @@
 							/>
 							<span class="hero__nav-location-city">Санкт-Петербург</span></a
 						>
-						<a class="a" href="">
+						<a class="links" href="">
 							<img
 								class="hero__nav-location-flag"
 								z
