--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 				</nav>
 			</div>
 		</header>
-		<section class="hero">
+		<!-- <section class="hero">
 			<div class="hero__inner container">
 				<nav class="hero__nav">
 					<div class="hero__nav-locations">
@@ -118,8 +118,8 @@
 					</div>
 				</div>
 			</div>
-		</section>
-		<section class="second">
+		</section> -->
+		<!-- <section class="second">
 			<div class="second__inner container">
 				<h2 class="second-title">Закусь</h2>
 				<div class="second__content">
@@ -143,7 +143,7 @@
 				</div>
 				<a class="fourth__btn" href="#">Показать ещё</a>
 			</div>
-		</section>
+		</section> -->
 		<script type="module" src="/src/js/main.js"></script>
 		<script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
 		<script src="./src/js/burger.js"></script>
