--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 					<div class="swiper-wrapper"></div>
 					<div class="swiper-pagination"></div>
 				</div>
-				<a class="more__btn" href="#">Показать ещё</a>
+				<a class="swiper__more-btn" href="#">Показать ещё</a>
 			</div>
 		</section>
 		<script type="module" src="/src/js/main.js"></script>
