chore: new section name

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 				</nav>
 			</div>
 		</header>
-		<section class="second">
+		<section class="third">
 			<div class="second__inner container">
 				<h2 class="second-title">Напитки</h2>
 				<div class="second__content">
