--- a/index.html
+++ b/index.html
@@ -145,15 +145,15 @@
 			</div>
 		</section>
 		<section class="third">
-			<div class="second__inner container">
-				<h2 class="second-title">Напитки</h2>
-				<div class="second__content">
-					<div class="second__content-buttons">
-						<a class="second__content-buttons-button" href="#">Вина</a>
-						<a class="second__content-buttons-button" href="#">Настойки</a>
-						<a class="second__content-buttons-button" href="#">Виски</a>
-						<a class="second__content-buttons-button" href="#">Пиво</a>
-						<a class="second__content-buttons-button" href="#">Коктели</a>
+			<div class="third__inner container">
+				<h2 class="third-title">Напитки</h2>
+				<div class="third__content">
+					<div class="third__content-buttons">
+						<a class="third__content-buttons-button" href="#">Вина</a>
+						<a class="third__content-buttons-button" href="#">Настойки</a>
+						<a class="third__content-buttons-button" href="#">Виски</a>
+						<a class="third__content-buttons-button" href="#">Коктели</a>
+						<a class="third__content-buttons-button" href="#">Новинки</a>
 					</div>
 					<form class="search-bar" action="">
 						<input type="text" placeholder="Поиск..." name="q" />
@@ -163,105 +163,10 @@
 					</form>
 				</div>
 				<div class="swiper">
-					<div class="swiper-wrapper">
-						<div class="swiper-slide">
-							<div class="swiper-slide__about">
-								<img src="./src/assets/images/vine.jpg" alt="voda" />
-								<div class="swiper-slide__about-inner">
-									<p class="swiper-slide__about-inner-name">Вино белое сухое</p>
-									<p class="swiper-slide__about-inner-about">
-										Белое сухое французское вино
-									</p>
-									<div class="swiper-slide__about-inner-down">
-										<p class="swiper-slide__about-inner-down-price">120 ₽</p>
-										<a class="swiper-slide__about-inner-down-btn" href="#"
-											><img src="./src/assets/icons/corob.svg" alt="corzina" />В
-											заказ</a
-										>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="swiper-slide">
-							<div class="swiper-slide__about">
-								<img src="./src/assets/images/vine.jpg" alt="voda" />
-								<div class="swiper-slide__about-inner">
-									<p class="swiper-slide__about-inner-name">Вино красное</p>
-									<p class="swiper-slide__about-inner-about">
-										Красное сладкое итальянское вино
-									</p>
-									<div class="swiper-slide__about-inner-down">
-										<p class="swiper-slide__about-inner-down-price">120 ₽</p>
-										<a class="swiper-slide__about-inner-down-btn" href="#"
-											><img src="./src/assets/icons/corob.svg" alt="corzina" />В
-											заказ</a
-										>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="swiper-slide">
-							<div class="swiper-slide__about">
-								<img src="./src/assets/images/vine.jpg" alt="voda" />
-								<div class="swiper-slide__about-inner">
-									<p class="swiper-slide__about-inner-name">
-										Вино розовое сухое
-									</p>
-									<p class="swiper-slide__about-inner-about">
-										Белое розовое французское вино
-									</p>
-									<div class="swiper-slide__about-inner-down">
-										<p class="swiper-slide__about-inner-down-price">120 ₽</p>
-										<a class="swiper-slide__about-inner-down-btn" href="#"
-											><img src="./src/assets/icons/corob.svg" alt="corzina" />В
-											заказ</a
-										>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="swiper-slide">
-							<div class="swiper-slide__about">
-								<img src="./src/assets/images/vine.jpg" alt="voda" />
-								<div class="swiper-slide__about-inner">
-									<p class="swiper-slide__about-inner-name">
-										Вино красное сухое
-									</p>
-									<p class="swiper-slide__about-inner-about">
-										Красное сухое французское вино
-									</p>
-									<div class="swiper-slide__about-inner-down">
-										<p class="swiper-slide__about-inner-down-price">120 ₽</p>
-										<a class="swiper-slide__about-inner-down-btn" href="#"
-											><img src="./src/assets/icons/corob.svg" alt="corzina" />В
-											заказ</a
-										>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="swiper-slide">
-							<div class="swiper-slide__about">
-								<img src="./src/assets/images/vine.jpg" alt="voda" />
-								<div class="swiper-slide__about-inner">
-									<p class="swiper-slide__about-inner-name">Вино белое сухое</p>
-									<p class="swiper-slide__about-inner-about">
-										Белое сухое французское вино
-									</p>
-									<div class="swiper-slide__about-inner-down">
-										<p class="swiper-slide__about-inner-down-price">120 ₽</p>
-										<a class="swiper-slide__about-inner-down-btn" href="#"
-											><img src="./src/assets/icons/corob.svg" alt="corzina" />В
-											заказ</a
-										>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
+					<div class="swiper-wrapper"></div>
 					<div class="swiper-pagination"></div>
 				</div>
-				<a class="fourth__btn" href="#">Показать ещё</a>
+				<a class="third__more-btn" href="#">Показать ещё</a>
 			</div>
 		</section>
 		<script type="module" src="/src/js/main.js"></script>
