feat: footer done

--- a/index.html
+++ b/index.html
@@ -144,6 +144,50 @@
 				<a class="second__more-btn" href="#">Показать ещё</a>
 			</div>
 		</section>
+		<footer class="footer">
+			<div class="footer__inner container">
+				<div class="footer__content">
+					<div class="bb">
+						<img src="./src/assets/icons/footerLogo.svg" alt="logo" />
+						<div class="aa">
+							<p class="footer__content-title">
+								Подписка на эксклюзивные новости
+							</p>
+							<input
+								class="footer__content-input"
+								placeholder="Ваша почта"
+								type="text"
+							/>
+							<a class="footer__content-button" href="">Подписаться</a>
+						</div>
+					</div>
+					<div class="footer__content-social">
+						<p>Наши социальные сети</p>
+						<div class="icons">
+							<a href="lel">
+								<img
+									class="header__menu-button-b"
+									src="./src/assets/icons/tg.svg"
+									alt="icon"
+								/>
+							</a>
+							<a href="lel"
+								><img
+									class="header__menu-button-b"
+									src="./src/assets/icons/vk.svg"
+									alt="icon"
+							/></a>
+							<a href="lel"
+								><img
+									class="header__menu-button-b"
+									src="./src/assets/icons/whatsup.svg"
+									alt="icon"
+							/></a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</footer>
 		<script type="module" src="/src/js/main.js"></script>
 		<script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
 		<script src="./src/js/burger.js"></script>
