--- a/index.html
+++ b/index.html
@@ -144,37 +144,54 @@
 				<a class="second__more-btn" href="#">Показать ещё</a>
 			</div>
 		</section>
-		<section class="third">
-			<div class="third__inner container">
-				<h2 class="third-title">Напитки</h2>
-				<div class="third__content">
-					<div class="third__content-buttons">
-						<a class="third__content-buttons-button" href="#">Вина</a>
-						<a class="third__content-buttons-button" href="#">Настойки</a>
-						<a class="third__content-buttons-button" href="#">Виски</a>
-						<a class="third__content-buttons-button" href="#">Коктели</a>
-						<a class="third__content-buttons-button" href="#">Новинки</a>
+		<!-- <footer class="footer">
+			<div class="footer__inner container">
+				<div class="footer__content">
+					<div class="bb">
+						<img src="./src/assets/icons/footerLogo.svg" alt="logo" />
+						<div class="aa">
+							<p class="footer__content-title">
+								Подписка на эксклюзивные новости
+							</p>
+							<input
+								class="footer__content-input"
+								placeholder="Ваша почта"
+								type="text"
+							/>
+							<a class="footer__content-button" href="">Подписаться</a>
+						</div>
 					</div>
-					<form class="search-bar" action="">
-						<input type="text" placeholder="Поиск..." name="q" />
-						<button type="submit">
-							<img src="./src/assets/icons/lupa.svg" alt="#" />
-						</button>
-					</form>
+					<div class="footer__content-social">
+						<p>Наши социальные сети</p>
+						<div class="icons">
+							<a href="lel">
+								<img
+									class="header__menu-button-b"
+									src="./src/assets/icons/tg.svg"
+									alt="icon"
+								/>
+							</a>
+							<a href="lel"
+								><img
+									class="header__menu-button-b"
+									src="./src/assets/icons/vk.svg"
+									alt="icon"
+							/></a>
+							<a href="lel"
+								><img
+									class="header__menu-button-b"
+									src="./src/assets/icons/whatsup.svg"
+									alt="icon"
+							/></a>
+						</div>
+					</div>
 				</div>
-				<div class="swiper">
-					<div class="swiper-wrapper"></div>
-					<div class="swiper-pagination"></div>
-				</div>
-				<a class="third__more-btn" href="#">Показать ещё</a>
 			</div>
-		</section>
+		</footer> -->
 		<script type="module" src="/src/js/main.js"></script>
 		<script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
 		<script src="./src/js/burger.js"></script>
 		<script src="./src/js/carousel.js"></script>
 		<script type="module" src="./src/server/api.js"></script>
-		<!-- <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script> -->
-		<!-- <script src="./src/js/carousel.js"></script> -->
 	</body>
 </html>
