--- a/index.html
+++ b/index.html
@@ -144,6 +144,31 @@
 				<a class="second__more-btn" href="#">Показать ещё</a>
 			</div>
 		</section>
+		<section class="third">
+			<div class="third__inner container">
+				<h2 class="third-title">Закусь</h2>
+				<div class="third__content">
+					<div class="third__content-buttons">
+						<a class="third__content-buttons-button" href="#">Роллы</a>
+						<a class="third__content-buttons-button" href="#">Пицца</a>
+						<a class="third__content-buttons-button" href="#">Устрицы</a>
+						<a class="third__content-buttons-button" href="#">Острое</a>
+						<a class="third__content-buttons-button" href="#">Новинки</a>
+					</div>
+					<form class="search-bar" action="">
+						<input type="text" placeholder="Поиск..." name="q" />
+						<button type="submit">
+							<img src="./src/assets/icons/lupa.svg" alt="#" />
+						</button>
+					</form>
+				</div>
+				<div class="swiper">
+					<div class="swiper-wrapper"></div>
+					<div class="swiper-pagination"></div>
+				</div>
+				<a class="third__more-btn" href="#">Показать ещё</a>
+			</div>
+		</section>
 		<!-- <footer class="footer">
 			<div class="footer__inner container">
 				<div class="footer__content">
