--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 				<a class="second__more-btn" href="#">Показать ещё</a>
 			</div>
 		</section>
-		<section class="second">
+		<section class="third">
 			<div class="second__inner container">
 				<h2 class="second-title">Закусь</h2>
 				<div class="second__content">
@@ -162,6 +162,31 @@
 						</button>
 					</form>
 				</div>
+				<div class="swiper">
+					<div class="swiper-wrapper"></div>
+					<div class="swiper-pagination"></div>
+				</div>
+				<a class="second__more-btn" href="#">Показать ещё</a>
+			</div>
+		</section>
+		<section class="fourth">
+			<div class="fourth__inner container">
+				<h2 class="fourth-title">Наборы</h2>
+				<!-- <div class="fourth__content">
+					<div class="fourth__content-buttons">
+						<a class="fourth__content-buttons-button" href="#">Роллы</a>
+						<a class="fourth__content-buttons-button" href="#">Пицца</a>
+						<a class="fourth__content-buttons-button" href="#">Устрицы</a>
+						<a class="fourth__content-buttons-button" href="#">Острое</a>
+						<a class="fourth__content-buttons-button" href="#">Новинки</a>
+					</div>
+					<form class="search-bar" action="">
+						<input type="text" placeholder="Поиск..." name="q" />
+						<button type="submit">
+							<img src="./src/assets/icons/lupa.svg" alt="#" />
+						</button>
+					</form>
+				</div> -->
 				<div class="swiper">
 					<div class="swiper-wrapper">
 						<div class="swiper-slide">
@@ -215,8 +240,7 @@
 									</div>
 									<p class="swiper-slide__about-inner-about">
 										Ассорти мясных деликатесов, ассорти сыров и антипасти,
-										хлебная корзина, парфе из птицы с фисташкой, гуаккамоле и
-										бутылка настойки в подарок.
+										хлебная корзина, гуаккамоле и бутылка настойки в подарок.
 									</p>
 									<div class="swiper-slide__about-inner-down">
 										<p class="swiper-slide__about-inner-down-price">4000 ₽</p>
