--- a/index.html
+++ b/index.html
@@ -163,7 +163,162 @@
 					</form>
 				</div>
 				<div class="swiper">
-					<div class="swiper-wrapper"></div>
+					<div class="swiper-wrapper">
+						<div class="swiper-slide">
+							<div class="swiper-slide__about">
+								<img
+									class="swiper-slide__image"
+									src="./src/assets/images/vine.jpg"
+									alt="vino"
+								/>
+								<div class="swiper-slide__about-inner">
+									<p class="swiper-slide__about-inner-name">Вино</p>
+									<p class="swiper-slide__about-inner-about">
+										Белое сухое Вино
+									</p>
+									<div class="swiper-slide__about-inner-down">
+										<p class="swiper-slide__about-inner-down-price">400</p>
+										<a href="#" class="swiper-slide__about-inner-down-btn">
+											<img src="/src/assets/icons/corzina.svg" alt="corzina" />
+											В заказ
+										</a>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="swiper-slide">
+							<div class="swiper-slide__about">
+								<img
+									class="swiper-slide__image"
+									src="./src/assets/images/vine.jpg"
+									alt="vino"
+								/>
+								<div class="swiper-slide__about-inner">
+									<p class="swiper-slide__about-inner-name">Вино</p>
+									<p class="swiper-slide__about-inner-about">
+										Белое сухое Вино
+									</p>
+									<div class="swiper-slide__about-inner-down">
+										<p class="swiper-slide__about-inner-down-price">400</p>
+										<a href="#" class="swiper-slide__about-inner-down-btn">
+											<img src="/src/assets/icons/corzina.svg" alt="corzina" />
+											В заказ
+										</a>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="swiper-slide">
+							<div class="swiper-slide__about">
+								<img
+									class="swiper-slide__image"
+									src="./src/assets/images/vine.jpg"
+									alt="vino"
+								/>
+								<div class="swiper-slide__about-inner">
+									<p class="swiper-slide__about-inner-name">Вино</p>
+									<p class="swiper-slide__about-inner-about">
+										Белое сухое Вино
+									</p>
+									<div class="swiper-slide__about-inner-down">
+										<p class="swiper-slide__about-inner-down-price">400</p>
+										<a href="#" class="swiper-slide__about-inner-down-btn">
+											<img src="/src/assets/icons/corzina.svg" alt="corzina" />
+											В заказ
+										</a>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="swiper-slide">
+							<div class="swiper-slide__about">
+								<img
+									class="swiper-slide__image"
+									src="./src/assets/images/vine.jpg"
+									alt="vino"
+								/>
+								<div class="swiper-slide__about-inner">
+									<p class="swiper-slide__about-inner-name">Вино</p>
+									<p class="swiper-slide__about-inner-about">
+										Белое сухое Вино
+									</p>
+									<div class="swiper-slide__about-inner-down">
+										<p class="swiper-slide__about-inner-down-price">400</p>
+										<a href="#" class="swiper-slide__about-inner-down-btn">
+											<img src="/src/assets/icons/corzina.svg" alt="corzina" />
+											В заказ
+										</a>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="swiper-slide">
+							<div class="swiper-slide__about">
+								<img
+									class="swiper-slide__image"
+									src="./src/assets/images/vine.jpg"
+									alt="vino"
+								/>
+								<div class="swiper-slide__about-inner">
+									<p class="swiper-slide__about-inner-name">Вино</p>
+									<p class="swiper-slide__about-inner-about">
+										Белое сухое Вино
+									</p>
+									<div class="swiper-slide__about-inner-down">
+										<p class="swiper-slide__about-inner-down-price">400</p>
+										<a href="#" class="swiper-slide__about-inner-down-btn">
+											<img src="/src/assets/icons/corzina.svg" alt="corzina" />
+											В заказ
+										</a>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="swiper-slide">
+							<div class="swiper-slide__about">
+								<img
+									class="swiper-slide__image"
+									src="./src/assets/images/vine.jpg"
+									alt="vino"
+								/>
+								<div class="swiper-slide__about-inner">
+									<p class="swiper-slide__about-inner-name">Вино</p>
+									<p class="swiper-slide__about-inner-about">
+										Белое сухое Вино
+									</p>
+									<div class="swiper-slide__about-inner-down">
+										<p class="swiper-slide__about-inner-down-price">400</p>
+										<a href="#" class="swiper-slide__about-inner-down-btn">
+											<img src="/src/assets/icons/corzina.svg" alt="corzina" />
+											В заказ
+										</a>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="swiper-slide">
+							<div class="swiper-slide__about">
+								<img
+									class="swiper-slide__image"
+									src="./src/assets/images/vine.jpg"
+									alt="vino"
+								/>
+								<div class="swiper-slide__about-inner">
+									<p class="swiper-slide__about-inner-name">Вино</p>
+									<p class="swiper-slide__about-inner-about">
+										Белое сухое Вино
+									</p>
+									<div class="swiper-slide__about-inner-down">
+										<p class="swiper-slide__about-inner-down-price">400</p>
+										<a href="#" class="swiper-slide__about-inner-down-btn">
+											<img src="/src/assets/icons/corzina.svg" alt="corzina" />
+											В заказ
+										</a>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
 					<div class="swiper-pagination"></div>
 				</div>
 				<a class="second__more-btn" href="#">Показать ещё</a>
@@ -172,21 +327,6 @@
 		<section class="fourth">
 			<div class="fourth__inner container">
 				<h2 class="fourth-title">Наборы</h2>
-				<!-- <div class="fourth__content">
-					<div class="fourth__content-buttons">
-						<a class="fourth__content-buttons-button" href="#">Роллы</a>
-						<a class="fourth__content-buttons-button" href="#">Пицца</a>
-						<a class="fourth__content-buttons-button" href="#">Устрицы</a>
-						<a class="fourth__content-buttons-button" href="#">Острое</a>
-						<a class="fourth__content-buttons-button" href="#">Новинки</a>
-					</div>
-					<form class="search-bar" action="">
-						<input type="text" placeholder="Поиск..." name="q" />
-						<button type="submit">
-							<img src="./src/assets/icons/lupa.svg" alt="#" />
-						</button>
-					</form>
-				</div> -->
 				<div class="swiper">
 					<div class="swiper-wrapper">
 						<div class="swiper-slide">
