--- a/index.html
+++ b/index.html
@@ -499,6 +499,31 @@
 				<a class="fourth__btn" href="#">Показать ещё</a>
 			</div>
 		</section>
+		<section class="about">
+			<div class="second__inner container">
+				<h2 class="second-title">О Нас</h2>
+				<div class="second__content">
+					<div class="second__content-pluses">
+						<p class="second__content-pluses-plus">
+							Меню можно заказать в любое время после бронирования столика, уже
+							когда вы посоветуетесь
+						</p>
+					</div>
+					<div class="second__content-pluses">
+						<p class="second__content-pluses-plus">
+							У некоторых ресторанов есть минимальный заказ. Меньше чем на
+							указанную сумму заказать нельзя.
+						</p>
+					</div>
+					<div class="second__content-pluses">
+						<p class="second__content-pluses-plus">
+							За доставку вашего заказа отвечаем мы. Прямо домой заказ доставит
+							курьер, а мы заберём.
+						</p>
+					</div>
+				</div>
+			</div>
+		</section>
 		<footer class="footer">
 			<div class="footer__inner container">
 				<div class="footer__content">
