feat: first page done

--- a/index.html
+++ b/index.html
@@ -527,9 +527,13 @@
 		<footer class="footer">
 			<div class="footer__inner container">
 				<div class="footer__content">
-					<div class="bb">
-						<img src="./src/assets/icons/footerLogo.svg" alt="logo" />
-						<div class="aa">
+					<div class="footer__content-news">
+						<img
+							class="footer__image"
+							src="./src/assets/icons/footerLogo.svg"
+							alt="logo"
+						/>
+						<div class="footer__content-under">
 							<p class="footer__content-title">
 								Подписка на эксклюзивные новости
 							</p>
@@ -542,22 +546,22 @@
 						</div>
 					</div>
 					<div class="footer__content-social">
-						<p>Наши социальные сети</p>
+						<p class="footer__content-social-text">Наши социальные сети</p>
 						<div class="icons">
-							<a href="lel">
+							<a href="#">
 								<img
 									class="header__menu-button-b"
 									src="./src/assets/icons/tg.svg"
 									alt="icon"
 								/>
 							</a>
-							<a href="lel"
+							<a href="#"
 								><img
 									class="header__menu-button-b"
 									src="./src/assets/icons/vk.svg"
 									alt="icon"
 							/></a>
-							<a href="lel"
+							<a href="#"
 								><img
 									class="header__menu-button-b"
 									src="./src/assets/icons/whatsup.svg"
